Merge des deux version (Résolution de conflits)